--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "glimr"
-version = "0.2.4"
+version = "0.2.5"
 
 description = "A batteries-included web framework for Gleam"
 licences = ["MIT"]
@@ -13,6 +13,7 @@ gleam_http = ">= 4.3.0 and < 5.0.0"
 gleam_json = ">= 3.1.0 and < 4.0.0"
 simplifile = ">= 2.3.1 and < 3.0.0"
 lustre = ">= 5.4.0 and < 6.0.0"
+gleam_erlang = ">= 1.3.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
