--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,7 @@ dot_env = ">= 1.2.0 and < 2.0.0"
 gleam_time = ">= 1.6.0 and < 2.0.0"
 gleam_crypto = ">= 1.5.1 and < 2.0.0"
 tom = ">= 2.0.0 and < 3.0.0"
+houdini = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
