--- a/loom/package.json
+++ b/loom/package.json
@@ -9,6 +9,7 @@
     "morphdom": "^2.7.8"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "happy-dom": "^20.6.1"
   }
 }
