feat(auth): add auth layer with session-based auth and password hashing
Introduces auth module (login, logout, check, id) wrapping session with
semantic helpers, password hashing via Argon2id (argus), and TOML-based
auth config with persistent_term caching. Includes tests and updated
config module docs for consistency.

--- a/gleam.toml
+++ b/gleam.toml
@@ -22,6 +22,7 @@ gleam_time = ">= 1.6.0 and < 2.0.0"
 gleam_crypto = ">= 1.5.1 and < 2.0.0"
 tom = ">= 2.0.0 and < 3.0.0"
 houdini = ">= 1.0.0 and < 2.0.0"
+argus = ">= 1.0.0 and < 2.0.0"
 
 gleam_regexp = ">= 1.0.0 and < 2.0.0"
 
